[API] Get Dog-as-a-Service API
