# scr/routes/dogRoutes.ts
@@ -8,6 +8,8 @@ const dogRoutes = (router: Router<any, {}>) => {
     router.put('/dog/updateDogInfo', dogControllers.updateDogInfo);
     router.delete('/dog/deleteDogInfo', dogControllers.deleteDogInfo);
     router.post('/dog/uploadDogPhoto', dogControllers.uploadDogPhoto);
+    router.get('/dog/getBreedsList', dogControllers.getBreedsList);
+    router.get('/dog/getBreedImg', dogControllers.getBreedImg);
 };
 
 export default dogRoutes;
